llvm/test/tools/llubi/intr_vector_splice_left_poison.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

define void @main() {
  %res = call <4 x i32> @llvm.vector.splice.left.v4i32(<4 x i32> zeroinitializer, <4 x i32> zeroinitializer, i32 poison)
  ret void
}

; CHECK: Entering function: main
; CHECK-NEXT: Immediate UB detected: vector_splice_left with poison offset
; CHECK-NEXT: error: Execution of function 'main' failed.
